# exchange-bot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
exchangebot/: __main__.py  cli.py  config.py
exchangebot/application/: exceptions.py  service.py
exchangebot/application/dto/: __init__.py  base.py  rates.py
exchangebot/application/interfaces/: __init__.py  rates_repository.py  repository.py  usecase.py
exchangebot/domain/: exceptions.py
exchangebot/domain/entities/: __init__.py  currency_rate.py
exchangebot/infrastructure/daily/: update_rates.py
exchangebot/infrastructure/di/: provider.py
exchangebot/infrastructure/rates/: cbr.py
exchangebot/infrastructure/repository/: redis_repo.py
exchangebot/presentation/telegram/: main.py
exchangebot/presentation/telegram/handlers/users/: exchange.py  start.py
tests/domain/: currency_rate.py
