[tool.poetry]
name = "exchange-bot"
version = "0.1.0"
description = ""
authors = ["Vitaliy Ukiru <33477790+vitaliy-ukiru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
