[tool.poetry]
name = "exchange-bot"
version = "0.1.0"
description = ""
authors = ["Vitaliy Ukiru <33477790+vitaliy-ukiru@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
aiogram = "^3.10.0"
click = "^8.1.7"
loguru = "^0.7.2"
redis = "^5.0.7"
dishka = "^1.2.0"
pytest = "^8.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
